# bga-rust-full-stack-note

./: README.md
rust-binary/: Cargo.toml
rust-binary/src/: main.rs
rust-library/: Cargo.toml
